--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,9 +4,12 @@
     <title>{{title}}</title>
     <link type='text/css' rel='stylesheet' href='/stylesheets/style.css'/>
     <link type='text/css' rel='stylesheet' href='/stylesheets/liquidcarousel.css'/>
-    <script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.liquidcarousel.pack.js"></script>
-    <script type="text/javascript" src="/js/main.js"></script>
+    <!--<script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>-->
+    <!--<script type="text/javascript" src="/js/jquery.liquidcarousel.pack.js"></script>-->
+    <!--<script type="text/javascript" src="/js/microajax.minified.js"></script>-->
+
+    <script type="text/javascript" src="/js/galleryModule.js"></script>
+    <script type="text/javascript" src="/js/main2.js"></script>
 </head>
 <body>
 {{{body}}}
