--- a/public/stylesheets/liquidcarousel.css
+++ b/public/stylesheets/liquidcarousel.css
@@ -1,5 +1,5 @@
 .liquid {
-	background:#313b31 url('../images/bodybackground.png') repeat-y scroll 50% 0;
+	background-color:#313b31/* url('../images/bodybackground.png') repeat-y scroll 50% 0*/;
 	border:2px solid #19301C;
 	-moz-border-radius:10px 10px 10px 10px;
 	-webkit-border-radius:10px 10px 10px 10px;
@@ -7,7 +7,7 @@
 	padding:10px 0;
 }
 .liquid .previous {
-	display:block;
+	display:none;
 	height:126px;
 	width:64px;
 	background-image:url('../images/previous.png');
@@ -16,7 +16,7 @@
 	padding:0;
 }
 .liquid .next {
-	display:block;
+	display:none;
 	height:126px;
 	width:64px;
 	background-image:url('../images/next.png');
@@ -24,10 +24,17 @@
 	margin:0;
 	padding:0;
 }
+
+.liquid ul {
+	height: 130px;
+}
+
 .liquid ul li {
-	width:126px;
+	float: left;
+	width:130px;
 	padding:0 2px;
 	margin:0;
+	display:block;
 }
 .liquid ul li a img {
 	-moz-box-shadow: 5px 5px 3px #222;
