--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}}</title>
-    <link type='text/css' rel='stylesheet' href='/stylesheets/style.css'/>
-    <link type='text/css' rel='stylesheet' href='/stylesheets/liquidcarousel.css'/>
-    <!--<script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>-->
-    <!--<script type="text/javascript" src="/js/jquery.liquidcarousel.pack.js"></script>-->
-    <!--<script type="text/javascript" src="/js/microajax.minified.js"></script>-->
-
-    <script type="text/javascript" src="/js/galleryModule.js"></script>
-    <script type="text/javascript" src="/js/main2.js"></script>
+<title>{{title}}</title>
+<link type='text/css' rel='stylesheet' href='/stylesheets/style.min.css'/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="text/javascript" src="/js/gallery.min.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
 </head>
 <body>
 {{{body}}}
